pbc_contract_codegen/tests/action/fail/zk/arg_instead_of_zk_state_action.stderr
error[E0308]: mismatched types
  --> tests/action/fail/zk/arg_instead_of_zk_state_action.rs:14:1
   |
14 | #[action(zk = true)]
   | ^^^^^^^^^^^^^^^^^^^^
   | |
   | expected `ZkState<_>`, found `u32`
   | expected due to this
   |
   = note: expected struct `ZkState<_>`
                found type `u32`
   = note: this error originates in the attribute macro `action` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/action/fail/zk/arg_instead_of_zk_state_action.rs:14:1
   |
14 | #[action(zk = true)]
   | ^^^^^^^^^^^^^^^^^^^^ expected `u32`, found `ZkState<_>`
15 | fn action(_context: pbc_contract_common::context::ContractContext, state: u32, arg1: u32) -> u32 {
   |    ------ arguments to this function are incorrect
   |
   = note: expected type `u32`
            found struct `ZkState<_>`
note: function defined here
  --> tests/action/fail/zk/arg_instead_of_zk_state_action.rs:15:4
   |
15 | fn action(_context: pbc_contract_common::context::ContractContext, state: u32, arg1: u32) -> u32 {
   |    ^^^^^^                                                                      ---------
   = note: this error originates in the attribute macro `action` (in Nightly builds, run with -Z macro-backtrace for more info)
